Improved Tensor Test Suite
- Set up Maven/JUnit tests for Tensors.
- Added equality methods in Tensor.java and Index.java.
- Added ability to assign name to Tensor via setName() method.
- Added some basic vector/scalar tests in Tensor.test.java.